--- a/src/components/Graphs/Graphs.css
+++ b/src/components/Graphs/Graphs.css
@@ -38,7 +38,20 @@
     display: flex; /* Use flexbox for layout and alignment */
     justify-content: space-between; /* Align table to the left with margins */
   }
+
+  .table-container {
+    max-height: 500px; /* Pas deze hoogte aan zoals gewenst */
+    overflow-y: auto;
+    overflow-x: hidden;
+    width: 100%; /* Ensure the section fills the container's width */
+    display: flex; /* Use flexbox for layout and alignment */
+    justify-content: space-between;
+  }
   
+  .table-container::-webkit-scrollbar {
+    display: none;
+  }
+
   table {
     width: 100%; /* Make the table span the full section */
     border-collapse: collapse;
@@ -53,12 +66,18 @@
   th {
     background-color: #0D1421; /* Set a dark background for headers */
     color: white; /* Ensure header text is visible */
-    font-weight: bold; /* Emphasize headers */
+    font-weight: bold; 
+    padding: 8px;
+    border-bottom: 1px solid #ddd;/* Emphasize headers */
   }
   
   td {
     background-color: #0D1421;
     color: white; /* Set a light background for data */
+  }
+
+  td span{
+    color: blue;
   }
   
   /* Remove borders from all cells except the bottom */
@@ -66,21 +85,26 @@
     border: 0 none; /* Set all borders to none */
   }
   
-  /* Add a bottom border only to table cells (including headers) */
-  tr { /* Target entire table rows */
-    border-bottom: 1px solid #ddd; /* Add a bottom border to each row */
+  tr {
+    border-bottom: 1px solid #ddd; 
+  }
+
+  thead th {
+    position: sticky;
+    top: 0;
+    background-color: #0D1421;
   }
   
   .buttons {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px; /* Afstand tussen de knoppen */
-    background-color: #ddd;
-    padding: 10px;
-    border-radius: 8px;
+    border-radius: 5px;
   }
   
+
+
+
   .buttons button {
     padding: 8px 16px;
     font-size: 16px;
@@ -94,4 +118,6 @@
   .buttons button:hover {
     background-color: #444;
   }
+
+
   
