--- a/src/components/Graphs/Graphs.css
+++ b/src/components/Graphs/Graphs.css
@@ -4,120 +4,154 @@
   overflow: hidden;
 }
 
-.Graphs-header{
-    padding: 0rem 2rem; 
-    display: flex;
+.Graphs-header {
+  padding: 0rem 2rem 2rem 0rem;
+  display: flex;
 }
 
-  .graphs-leftside{
-    width: 600px;
-    height: 240px;
-    margin-top: 2rem;
-  }
+.graphs-leftside {
+  width: 600px;
+  height: 240px;
+  margin: 2rem;
+}
 
-  .Graphs-header .line{
-    width: 1px;
-    height: 100vh;
-    background-color: #323546;
-    margin-left: 2rem;
-  }
+.Graphs-header .line {
+  width: 1px;
+  height: 100vh;
+  background-color: #323546;
+  margin-left: 2rem;
+}
 
-  .top{
-    width: 1000px;
-    height: 510px;
-    margin:  2rem 2rem;
-    background-color: rgb(255, 0, 0);
-  }
+.top {
+  width: 1000px;
+  height: 510px;
+  margin: 2rem 2rem;
+  background-color: rgb(255, 0, 0);
+}
 
-  .Graphs-container {
-    position: relative;
-  }
+.Graphs-container {
+  position: relative;
+}
 
-  section {
-    width: 100%; /* Ensure the section fills the container's width */
-    display: flex; /* Use flexbox for layout and alignment */
-    justify-content: space-between; /* Align table to the left with margins */
-  }
+section {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
 
-  .table-container {
-    max-height: 500px; /* Pas deze hoogte aan zoals gewenst */
-    overflow-y: auto;
-    overflow-x: hidden;
-    width: 100%; /* Ensure the section fills the container's width */
-    display: flex; /* Use flexbox for layout and alignment */
-    justify-content: space-between;
-  }
-  
-  .table-container::-webkit-scrollbar {
-    display: none;
-  }
+.table-container {
+  max-height: 550px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
 
-  table {
-    width: 100%; /* Make the table span the full section */
-    border-collapse: collapse;
-  }
-  
-  th, td {
-    white-space: nowrap; /* Prevent wrapping and ensure full width text */
-    text-align: center; /* Align text to the left within cells */
-    padding: 10px; /* Add padding for better spacing */
-  }
-  
-  th {
-    background-color: #0D1421; /* Set a dark background for headers */
-    color: white; /* Ensure header text is visible */
-    font-weight: bold; 
-    padding: 8px;
-    border-bottom: 1px solid #ddd;/* Emphasize headers */
-  }
-  
-  td {
-    background-color: #0D1421;
-    color: white; /* Set a light background for data */
-  }
+.table-container::-webkit-scrollbar {
+  display: none;
+}
 
-  td span{
-    color: blue;
-  }
-  
-  /* Remove borders from all cells except the bottom */
-  th, td {
-    border: 0 none; /* Set all borders to none */
-  }
-  
-  tr {
-    border-bottom: 1px solid #ddd; 
-  }
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
 
-  thead th {
-    position: sticky;
-    top: 0;
-    background-color: #0D1421;
-  }
-  
-  .buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-  }
-  
+th, td {
+  white-space: nowrap;
+  text-align: center;
+  padding: 10px;
+}
 
+th {
+  background-color: #0D1421;
+  color: white;
+  font-weight: bold;
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
+}
 
+td {
+  background-color: #0D1421;
+  color: white;
+}
 
-  .buttons button {
-    padding: 8px 16px;
-    font-size: 16px;
-    border: none;
-    background-color: #333;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .buttons button:hover {
-    background-color: #444;
-  }
+.detail-link a {
+  text-decoration: none;
+  color: blue;
+}
 
+.detail-link a:hover span.test {
+  text-decoration: underline;
+}
 
-  
+th, td {
+  border: 0 none;
+}
+
+tr {
+  border-bottom: 1px solid #ddd;
+}
+
+tr:hover {
+  font-weight: bolder;
+}
+
+thead th {
+  position: sticky;
+  top: 0;
+  background-color: #0D1421;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+
+.buttons button {
+  padding: 8px 16px;
+  font-size: 16px;
+  border: none;
+  background-color: #333;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.buttons button:hover {
+  background-color: #444;
+}
+.favorites {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  margin: 25px;
+  max-height: 200px; /* Set maximum height */
+  overflow-y: auto; /* Enable vertical scrolling if content exceeds max-height */
+}
+
+/* Hide the vertical scrollbar on the left */
+.favorites::-webkit-scrollbar {
+  width: 0;
+  background-color: transparent; /* Set background color to match the container */
+}
+
+.favorite-content {
+  display: flex;
+  align-items: center;
+}
+
+.favorite-icon {
+  margin-top: 5px;
+  margin-right: 5px;
+  font-size: 20px;
+}
+
+.favorite-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
