--- a/src/components/Graphs/Graphs.css
+++ b/src/components/Graphs/Graphs.css
@@ -153,5 +153,19 @@ thead th {
   list-style: none;
   padding: 0;
   margin: 0;
+  
 }
 
+.search-bar{
+  display: flex;
+  justify-content: end;
+}
+
+.search-bar-input{
+  background-color: #323546;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  margin: 10px 2rem 10px 0px;
+  height: 25px;
+}
