--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,43 +7,42 @@
 }
 
 footer {
-    color: #fff;
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  .footer-container {
-    padding: 20px;
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .footer-section {
-    flex: 1;
-    margin: 0 20px;
-  }
-  
-  .footer-section h3 {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-  
-  .footer-section ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .footer-section ul li {
-    margin-bottom: 5px;
-  }
-  
-  .footer-section ul li a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  .footer-section p {
-    font-size: 14px;
-  }
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  bottom: 0;
+  width: 100%;
+}
 
-  
-  
+.footer-container {
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer-section {
+  flex: 1;
+  margin: 0 20px;
+}
+
+.footer-section h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-section ul li {
+  margin-bottom: 5px;
+}
+
+.footer-section ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-section p {
+  font-size: 14px;
+}
