--- a/src/components/CryptoIcons/CryptoIcons.css
+++ b/src/components/CryptoIcons/CryptoIcons.css
@@ -8,15 +8,15 @@
   .crypto-icon {
     font-size: 3rem;
     margin: 10px;
-    animation: moveUpDown 1.5s infinite alternate;
+    animation: rotate 5s linear infinite; /* Apply the rotate animation */
   }
   
-  @keyframes moveUpDown {
-    0% {
-      transform: translateY(0);
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg); /* Start rotating from 0 degrees */
     }
-    100% {
-      transform: translateY(-20px);
+    to {
+      transform: rotate(360deg); /* Rotate to 360 degrees */
     }
   }
   
